# CatLink

./: CMakeLists.txt  README.md
reference/: CatLink V0.1 Note (256 Fixed).docx
src/: CMakelists.txt  catlink.c  catlink.h
test/: test01.c
